force-app/main/default/objects/Game__c/fields/Announcement__c.field-meta.xml
<CustomField>
    <fullName>Announcement__c</fullName>
    <label>Announcement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Box_Type</valueSetName>
    </valueSet>
</CustomField>