force-app/main/default/objects/Game__c/fields/Dice_List__c.field-meta.xml
<CustomField>
    <fullName>Dice_List__c</fullName>
    <label>Dice List</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>