force-app/main/default/objects/Game__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <label>Form</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>