force-app/main/default/objects/Game__c/fields/Form_Code__c.field-meta.xml
<CustomField>
    <fullName>Form_Code__c</fullName>
    <defaultValue>&apos;DUFA&apos;</defaultValue>
    <label>Form Code</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>