force-app/main/default/objects/Game__c/fields/Game_String__c.field-meta.xml
<CustomField>
    <fullName>Game_String__c</fullName>
    <label>Game String</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>