force-app/main/default/objects/Game__c/fields/Number_of_Dice__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Dice__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Number of Dice</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>