force-app/main/default/objects/Game__c/fields/Roll_Count__c.field-meta.xml
<CustomField>
    <fullName>Roll_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Roll Count</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>