force-app/main/default/objects/Game__c/fields/Sheet__c.field-meta.xml
<CustomField>
    <fullName>Sheet__c</fullName>
    <defaultValue>&apos;{}&apos;</defaultValue>
    <label>Sheet</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>